# nusantara-starlore

./: CMakeLists.txt  README.md  constellation_names.eng.fab  constellationship.fab  description.en.utf8  description.id.utf8  info.ini  planet_names.fab  star_names.fab
buginese/: CMakeLists.txt  constellation_names.eng.fab  constellationship.fab  description.en.utf8  description.id.utf8  dso_names.fab  info.ini  planet_names.fab  star_names.fab
javanese/: CMakeLists.txt  constellation_names.eng.fab  constellationship.fab  description.en.utf8  description.id.utf8  info.ini  planet_names.fab
